--- a/styles/style.css
+++ b/styles/style.css
@@ -73,9 +73,10 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: end;
+  flex-wrap: wrap;
 }
 
-.align-item__center {
+.search-form__fieldset:nth-child(2) { /* Выравнивание чекбоксов для соответствия макету */
   align-self: center;
 }
 
@@ -164,7 +165,12 @@ ol {
 }
 
 .content__video-card-description {
-  line-height: 16.2px;
+  line-height: 90%;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .visually-hidden {
@@ -280,7 +286,7 @@ ol {
 }
 
 .more-button {
-  width: 390px;
+  width: 99%;
   height: 34px;
   margin-top: 30px;
 }
