--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,8 @@ ol {
   flex-wrap: wrap;
 }
 
-.search-form__fieldset:nth-child(2) { /* Выравнивание чекбоксов для соответствия макету */
+.search-form__fieldset:nth-child(2) {
+  /* Выравнивание чекбоксов для соответствия макету */
   align-self: center;
 }
 
@@ -102,6 +103,7 @@ ol {
 .result__video {
   height: 100%;
   width: 100%;
+  object-position: center;
   object-fit: cover;
 }
 
@@ -147,6 +149,7 @@ ol {
 .content__card-link {
   text-decoration: none;
   color: white;
+  display: block;
 }
 
 .content__video-card-description-container {
@@ -249,6 +252,10 @@ ol {
   text-decoration: underline;
 }
 
+.search-form__label:active .search-form__label-text {
+  text-decoration: none;
+}
+
 .search-form__label:has(input[type="checkbox"]) {
   cursor: pointer;
 }
@@ -262,14 +269,16 @@ ol {
   line-height: 100%;
   font-weight: 700;
   cursor: pointer;
-}
-
-.button:active {
-  background-color: rgba(84, 80, 80, 1);
+  height: 34px;
 }
 
 .button:hover {
   text-decoration: underline;
+}
+
+.button:active {
+  background-color: rgba(84, 80, 80, 1);
+  text-decoration: none;
 }
 
 .button:focus {
@@ -282,17 +291,11 @@ ol {
 
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
 }
 
 .more-button {
   width: 99%;
-  height: 34px;
   margin-top: 30px;
-}
-
-.content__card-link {
-  display: block;
 }
 
 .content__card-link_current {
@@ -303,12 +306,12 @@ ol {
   padding: 1px 3px 0; /* Добавил 1px сверху, что  бы у первой карточки не пропадала верхняя обводка*/
 }
 
-.content__list-item:active {
-  background-color: rgba(84, 80, 80, 1);
-}
-
-.content__list-item:hover {
+.content__card-link:hover {
   text-decoration: underline;
+}
+.content__card-link:active {
+  background-color: rgba(84, 80, 80, 1);
+  text-decoration: none;
 }
 
 .content__card-link:focus {
